SF Primes/src/objects/Installed_Base_Item__c.object
<CustomObject>
    <description>Digital product components at the Client</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_Base__c</fullName>
        <label>Installed Base Parent</label>
        <referenceTo>Installed_Base__c</referenceTo>
        <relationshipLabel>Installed Base Components</relationshipLabel>
        <relationshipName>Installed_Base_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instance_Number__c</fullName>
        <externalId>true</externalId>
        <label>Parent Instance Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Category_Segment1__c</fullName>
        <label>Item Category Segment1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Category_Segment2__c</fullName>
        <label>Item Category Segment2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Category_Segment3__c</fullName>
        <label>Item Category Segment3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Instance_Number__c</fullName>
        <label>Parent Instance Number DONT USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Number__c</fullName>
        <label>Sales Order Line Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Installed Base Component</label>
    <nameField>
        <label>Installed Base Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Base Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>